--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
     - docker build -t kabeerchoudary/node_nginx -f Dockerfile.dev .
 
 script:
-    - docker run kabeerchoudary/node_nginx npm run test -- --coverage
+    - docker run -e CI=true kabeerchoudary/node_nginx npm run test -- --coverage
